feat: tailwindcss config

--- a/src/assets/css/flex.scss
+++ b/src/assets/css/flex.scss
@@ -1,22 +1,22 @@
-.flex {
-  display:flex
-}
+// .flex {
+//   display:flex
+// }
 
-.flex-item {
-  flex:1
-}
+// .flex-item {
+//   flex:1
+// }
 
-.flex-align-center {
-  display: flex;
-  align-items:center
-}
+// .flex-align-center {
+//   display: flex;
+//   align-items:center
+// }
 
-.flex-column {
-  flex-direction: column;
-}
+// .flex-column {
+//   flex-direction: column;
+// }
 
-.flex-center {
-  display: flex;
-  justify-content: center
-}
+// .flex-center {
+//   display: flex;
+//   justify-content: center
+// }
 
